--- a/Views/Layout/AdminLayout.cshtml
+++ b/Views/Layout/AdminLayout.cshtml
@@ -169,10 +169,12 @@
             </div>
             <div class="navigation">
                 <h3>ADMIN</h3>
-                <ul>
+                @*<ul>
                     <li><a href="#"><i class="fa fa-th-large"></i></a></li>
-                    <li>@Html.ActionLink("Danh mục sản phẩm", "Index", "QuanLySanPham")</li>
-                </ul>
+                    <li>@Html.ActionLink("Quản lý sản phẩm", "Index", "QuanLySanPham")</li>
+                </ul>*@
+                @Html.Action("SanPhamPartial", "Admin")
+
                 <ul>
                     <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                     <li>@Html.ActionLink("Danh mục đơn hàng", "Index", "QuanLyDonHang")</li>
@@ -440,7 +442,7 @@
                 <div class="clearfix"></div>
             </div>*@
             <div class="clearfix"></div>
-            <p class="home">@Html.ActionLink("Home","Index","Admin") &gt; <strong> Dashboard</strong></p>
+            <p class="home">@Html.ActionLink("Home","Index","Admin") &gt; <strong> Dashboard</strong><a href="@Url.Action("Index","Home")" style="float:right; width: 200px;">Về trang chủ</a></p>
             @*<div class="list_of_members">
                 <div class="sales">
                     <div class="icon">
@@ -649,12 +651,12 @@
         </div>
         <div class="clearfix"></div>
     </div>
-    <div class="footer">
+    @*<div class="footer">
         <div class="copyright text-center">
             <p>© 2015 All rights reserved | Template by  <a href="http://w3layouts.com">  W3layouts</a></p>
         </div>
-    </div>
+    </div>*@
 
-    <div class="jqvmap-label" style="display: none; left: 732px; top: 1010px;">China</div>
+   @* <div class="jqvmap-label" style="display: none; left: 732px; top: 1010px;">China</div>*@
 </body>
 </html>
