--- a/Views/QuanLyDonHang/ChiTiet.cshtml
+++ b/Views/QuanLyDonHang/ChiTiet.cshtml
@@ -6,9 +6,9 @@
 
 <div class="col-md-12">
 
-    <div style="margin-bottom:5px;">
+   @* <div style="margin-bottom:5px;">
         @Html.ActionLink("Xác nhận đã giao hàng", "CartConfirm", "QuanLyDonHang", new { @class="btn btn-primary"})
-    </div>
+    </div>*@
     <div class="panel panel-primary">
         <div class="panel-heading">Chi tiết đơn hàng</div>
         <div class="panel-body">
